--- a/index.html
+++ b/index.html
@@ -1,161 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Boot to react</title>
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
-      crossorigin="anonymous"
+    <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="Web site created using create-react-app"
     />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link
+    rel="stylesheet"
+    href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+    crossorigin="anonymous"
+  />
+    <!--
+      manifest.json provides metadata used when your web app is installed on a
+      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
+    -->
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!--
+      Notice the use of %PUBLIC_URL% in the tags above.
+      It will be replaced with the URL of the `public` folder during the build.
+      Only files inside the `public` folder can be referenced from the HTML.
+
+      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
+      work correctly both with client-side routing and a non-root public URL.
+      Learn how to configure a non-root public URL by running `npm run build`.
+    -->
+    <title>React App</title>
   </head>
   <body>
-    <!-- navbar start -->
-    <nav class="navbar navbar-expand-lg text-white bg-dark">
-      <a class="navbar-brand text-success" href="#">Navbar</a>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+    <!--
+      This HTML file is a template.
+      If you open it directly in the browser, you will see an empty page.
 
-      <div class="collapse navbar-collapse">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link text-white" href="#">Home </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link text-white" href="#">About Us</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link text-white">
-              Products
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" href="#">Meeting</a>
-          </li>
-        </ul>
-        <form class="form-inline my-2 my-lg-0">
-          <input
-            class="form-control mr-sm-2"
-            type="search"
-            placeholder="Search"
-            aria-label="Search"
-          />
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
-            Search
-          </button>
-        </form>
-      </div>
-    </nav>
+      You can add webfonts, meta tags, or analytics to this file.
+      The build step will place the bundled scripts into the <body> tag.
 
-    <!-- navbar ends -->
-
-    <!-- jumbotron start -->
-    <div class="jumbotron ">
-      <h1 class="display-4">App looks great!</h1>
-      <p class="lead">
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ratione
-        necessitatibus, quas voluptas beatae optio maxime cupiditate at fuga
-        officiis odit rem provident nobis esse magni! Lorem ipsum dolor sit amet
-        consectetur, adipisicing elit. Assumenda velit dolorem repudiandae qui
-        rerum possimus sit animi. Illo, laudantium ea!
-      </p>
-      <hr class="my-4" />
-      <p>
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem,
-        incidunt?
-      </p>
-      <a class="btn btn-success btn-lg" href="#" role="button"
-        >React is awesome</a
-      >
-    </div>
-
-    <!-- jumbotron end -->
-
-    <!-- feature section -->
-    <div class="bg-success text-center">
-      <p class="display-4 text-white p-4">Discover the amazing new app</p>
-      <p class="text-white">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, rem?
-      </p>
-      <div class="row  p-4">
-        <div class="col-6 text-right">
-          <button class="btn btn-warning btn-lg">Play Store</button>
-        </div>
-        <button class="btn btn-warning btn-lg">App Store</button>
-        <div class="col-6 text-center"></div>
-      </div>
-    </div>
-    <!-- feature section ends -->
-
-    <!-- get in touch section -->
-    <section class="contact bg-success ">
-      <div class="container ">
-        <h2 class="text-white">
-          We love new friends!
-        </h2>
-        <div class="row">
-          <div class="col-4">
-            <div class="card" style="width: 18rem;">
-              <img
-                src="https://images.pexels.com/photos/3532557/pexels-photo-3532557.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
-                class="card-img-top"
-                alt="..."
-              />
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
-                </p>
-                <a href="#" class="btn btn-success">Go somewhere</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-4">
-            <div class="card" style="width: 18rem;">
-              <img
-                src="https://images.pexels.com/photos/3532544/pexels-photo-3532544.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
-                class="card-img-top"
-                alt="..."
-              />
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
-                </p>
-                <a href="#" class="btn btn-success">Go somewhere</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-4">
-            <div class="card" style="width: 18rem;">
-              <img
-                src="https://images.pexels.com/photos/2522663/pexels-photo-2522663.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
-                class="card-img-top"
-                alt="..."
-              />
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
-                </p>
-                <a href="#" class="btn btn-success">Go somewhere</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- get in touch section ends -->
-
-    <!-- footer section -->
-    <section class="footer  bg-dark text-white">
-      <p class="lead container">Contact us at Instagram</p>
-      <p class="lead container">You can react via email too</p>
-      <p class="lead container">NO COPYRIGHT</p>
-    </section>
-    <!-- footer section ends -->
+      To begin the development, run `npm start` or `yarn start`.
+      To create a production bundle, use `npm run build` or `yarn build`.
+    -->
   </body>
 </html>
